--- a/olm-catalog/stable/eclipse-che.v7.107.0.bundle.yaml
+++ b/olm-catalog/stable/eclipse-che.v7.107.0.bundle.yaml
@@ -1,3 +1,15 @@
+#
+# Copyright (c) 2019-2024 Red Hat, Inc.
+# This program and the accompanying materials are made
+# available under the terms of the Eclipse Public License 2.0
+# which is available at https://www.eclipse.org/legal/epl-2.0/
+#
+# SPDX-License-Identifier: EPL-2.0
+#
+# Contributors:
+#   Red Hat, Inc. - initial API and implementation
+#
+
 
 image: quay.io/eclipse/eclipse-che-olm-bundle:7.107.0
 name: eclipse-che.v7.107.0
