--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -119,3 +119,5 @@ entries:
     replaces: eclipse-che.v7.105.0
   - name: eclipse-che.v7.107.0
     replaces: eclipse-che.v7.106.0
+  - name: eclipse-che.v7.108.0
+    replaces: eclipse-che.v7.107.0
